fix(ui-fix): Alignment and UI widget load fix

--- a/src/app/stack/stack-report-inshort/stack-report-inshort.component.less
+++ b/src/app/stack/stack-report-inshort/stack-report-inshort.component.less
@@ -6,7 +6,7 @@
     margin-top: 100px;
     text-align: center;
   }
-  .center-text { margin: 0 auto; }
+  .center-text { margin: 0 auto; text-align: center; }
   .active-menu-item {
     .nav-link {
       &.active {
